# ckanext-detroit-data

./: MANIFEST.in  README.md  category.json  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/detroit_data/: category.json  cli.py  helpers.py  plugin.py  views.py
ckanext/detroit_data/assets/: script.js  webassets.yml
ckanext/detroit_data/logic/: action.py  auth.py  schema.py  validators.py
ckanext/detroit_data/public/: theme.css
ckanext/detroit_data/templates/: base.html  header.html
ckanext/detroit_data/templates/admin/: config.html
ckanext/detroit_data/templates/group/snippets/: helper.html
ckanext/detroit_data/templates/home/: layout1.html  robots.txt
ckanext/detroit_data/templates/home/snippets/: featured_group.html  featured_organization.html  promoted.html  stats.html
ckanext/detroit_data/templates/package/: group_list.html
ckanext/detroit_data/templates/scheming/group/: group_form.html
ckanext/detroit_data/templates/snippets/: search_result_text.html
ckanext/detroit_data/templates/user/: dashboard_organizations.html
ckanext/detroit_data/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/detroit_data/tests/logic/: test_action.py  test_auth.py  test_validators.py
