[metadata]
name = ckanext-detroit-data
version = 1.1.0
description = Detroit Data CKAN extension
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DetroitData/ckanext-detroit-data
author = Eric Lau
author_email = hello@erxclau.me
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             detroit_data = ckanext.detroit_data.plugin:DetroitDataPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/detroit_data/i18n/ckanext-detroit_data.pot
width = 80

[init_catalog]
domain = ckanext-detroit_data
input_file = ckanext/detroit_data/i18n/ckanext-detroit_data.pot
output_dir = ckanext/detroit_data/i18n

[update_catalog]
domain = ckanext-detroit_data
input_file = ckanext/detroit_data/i18n/ckanext-detroit_data.pot
output_dir = ckanext/detroit_data/i18n
previous = true

[compile_catalog]
domain = ckanext-detroit_data
directory = ckanext/detroit_data/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
